--- a/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
@@ -93,10 +93,32 @@ jobs:
             whl=$(stat -f "%m %N" ./*.whl | sort -n | tail -n 1 | cut -d' ' -f2-)
             echo "Processing wheel: $whl"
 
-            pip install delocate
-            delocate-wheel -w . "$whl"
+            # Unpack the wheel
+            wheel unpack "$whl"
 
-            echo "=== Final wheel filename ==="
+            # Get into the unpacked directory
+            target_dir=$(echo "$whl" | cut -d "-" -f1 -f2)
+            cd "$target_dir"
+
+            # Find the dylib
+            target=$(find . -iname "libllvmlite.dylib")
+            echo "Found dylib at: $target"
+
+            echo "=== BEFORE ==="
+            otool -L "$target"
+
+            # Fix all @rpath libraries
+            install_name_tool -change "@rpath/libz.1.dylib" "/usr/lib/system/libz.1.dylib" "$target"
+            install_name_tool -change "@rpath/libc++.1.dylib" "/usr/lib/system/libc++.1.dylib" "$target"
+
+            echo "=== AFTER ==="
+            otool -L "$target"
+
+            echo "=== $target_dir contents ==="
+            find . -ls
+            echo "=== Write back to wheel ==="
+            cd ..
+            wheel pack "$target_dir"
 
             echo "=== Final wheel filename ==="
             ls -la ./*.whl # List wheel in dist dir
