--- a/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
@@ -48,6 +48,21 @@ jobs:
           auto-update-conda: true
           auto-activate-base: true
 
+      - name: Check Initial libunwind State
+        run: |
+          echo "=== Initial libunwind check ==="
+          if [ -f "$CONDA_PREFIX/lib/libunwind.1.0.dylib" ]; then
+            echo "Found libunwind.1.0.dylib at: $CONDA_PREFIX/lib/libunwind.1.0.dylib"
+            echo "=== Dependencies ==="
+            otool -L "$CONDA_PREFIX/lib/libunwind.1.0.dylib"
+            echo "=== RPATH entries ==="
+            otool -l "$CONDA_PREFIX/lib/libunwind.1.0.dylib" | grep -A2 LC_RPATH || echo "No RPATHs found"
+          else
+            echo "No libunwind.1.0.dylib found in $CONDA_PREFIX/lib"
+          fi
+          echo "=== All libunwind files in conda lib ==="
+          find "$CONDA_PREFIX/lib" -name "libunwind*" -ls
+
       - name: Download llvmdev Artifact
         if: ${{ inputs.llvmdev_run_id != '' }}
         uses: actions/download-artifact@v4
@@ -66,6 +81,19 @@ jobs:
               CHAN="${{ env.CONDA_CHANNEL_NUMBA }}"
           fi
           conda install -c "$CHAN" llvmdev=${{ env.FALLBACK_LLVMDEV_VERSION }} python-build -y
+
+          echo "=== Post-install libunwind check ==="
+          if [ -f "$CONDA_PREFIX/lib/libunwind.1.0.dylib" ]; then
+            echo "Found libunwind.1.0.dylib at: $CONDA_PREFIX/lib/libunwind.1.0.dylib"
+            echo "=== Dependencies ==="
+            otool -L "$CONDA_PREFIX/lib/libunwind.1.0.dylib"
+            echo "=== RPATH entries ==="
+            otool -l "$CONDA_PREFIX/lib/libunwind.1.0.dylib" | grep -A2 LC_RPATH || echo "No RPATHs found"
+          else
+            echo "No libunwind.1.0.dylib found in $CONDA_PREFIX/lib"
+          fi
+          echo "=== All libunwind files in conda lib ==="
+          find "$CONDA_PREFIX/lib" -name "libunwind*" -ls
 
           if [ -f "$CONDA_PREFIX/lib/libunwind.1.0.dylib" ]; then
             echo "Found libunwind in conda environment, moving it temporarily"
