update llvmlite osx-64 wheel builder workflow to set MACOSX_DEPLOYMENT_TARGET to 10.15 and remove Xcode 14.1 selection step for improved compatibility

--- a/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
@@ -97,7 +97,7 @@ jobs:
 
           echo "=== Inspecting llvmdev package ==="
           echo "1. Finding llvmdev package directory:"
-          LLVMDEV_PATH=$(find "$CONDA_PREFIX/pkgs" -name "llvmdev-*" -type d | head -1)
+          LLVMDEV_PATH=$(find "$(conda info --base)/pkgs" -name "llvmdev-*" -type d | head -1)
           if [ -n "$LLVMDEV_PATH" ]; then
             echo "Found llvmdev at: $LLVMDEV_PATH"
             echo "2. Checking for libunwind in package:"
