add LDFLAGS to llvmlite osx-64 wheel builder workflow for improved library path handling during wheel build

--- a/.github/workflows/llvmlite_osx-64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-64_wheel_builder.yml
@@ -73,6 +73,7 @@ jobs:
       - name: Build wheel
         env:
           MACOSX_DEPLOYMENT_TARGET: "10.15"
+          LDFLAGS: "-Wl,-rpath,/usr/lib"
         run: python -m build
 
       - name: Fix macOS wheel library paths
