--- a/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
@@ -86,8 +86,25 @@ jobs:
         env:
           MACOSX_DEPLOYMENT_TARGET: "11.1"
           LDFLAGS: "-Wl,-rpath,/usr/lib"
+          CFLAGS: "-v"
+          CXXFLAGS: "-v"
         run: |
           arch -arm64 python -m build --verbose
+
+      - name: Inspect wheel
+        run: |
+          # unpack the wheel
+          mkdir -p wheel_contents
+          cd wheel_contents
+          python -m wheel unpack ../dist/*.whl
+          ls -la
+          # inspect the dylib
+          otool -L llvmlite.libs/libllvmlite.dylib
+          # inspect the rpath
+          otool -l llvmlite.libs/libllvmlite.dylib | grep -A2 LC_RPATH
+          # clean up
+          cd ..
+          rm -rf wheel_contents
 
       - name: Upload wheel
         uses: actions/upload-artifact@v4
