--- a/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
@@ -70,8 +70,13 @@ jobs:
       - name: Build wheel
         env:
           MACOSX_DEPLOYMENT_TARGET: "11.1"
-          LDFLAGS: "-v -Wl,-no_weak_imports -Wl,-rpath,/usr/lib"
+          LDFLAGS: "-v -Wl,-rpath,/usr/lib"
+          CFLAGS: "-v"
+          CXXFLAGS: "-v"
         run: |
+          echo "LDFLAGS=$LDFLAGS"
+          echo "CFLAGS=$CFLAGS"
+          echo "CXXFLAGS=$CXXFLAGS"
           arch -arm64 python -m build --verbose --config-setting="--global-option=build_ext" --config-setting="--global-option=-v"
 
       - name: Inspect wheel
