--- a/.github/workflows/llvmlite_linux-64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_linux-64_wheel_builder.yml
@@ -123,6 +123,7 @@ jobs:
 
             # Check wheel structure
             twine check "$WHL_FILE"
+          done
 
   linux-64-test:
     name: linux-64-test
@@ -158,7 +159,7 @@ jobs:
 
           # Install wheel and run tests
           cd dist
-          whl=$(stat -f "%m %N" ./*.whl | sort -n | tail -n 1 | cut -d' ' -f2-)
+          whl=$(ls -t ./*.whl | head -n 1)
           echo "Using wheel: $whl"
           $PYTHON_PATH -m pip install -v "$whl"
 
